--- a/fitcoach/src/app/shared/components/set-logger/set-logger.component.css
+++ b/fitcoach/src/app/shared/components/set-logger/set-logger.component.css
@@ -1,3 +1,5 @@
+:host { display: block; }
+
 .set-logger {
   display: block !important;
   width: 100% !important;
